Add some more bootstrap cleanup and classes.

--- a/app/partials/controllers/unitList.html
+++ b/app/partials/controllers/unitList.html
@@ -1,6 +1,6 @@
-<div>
+<div class=well>
     <ul class="nav nav-list">
-        <li class="nav-header">{{course}}</li>
+        <li class=nav-header>{{course}}</li>
         <li ng-repeat="unit in units">
             <a href="index.html#/units/{{unit.path}}">
                 {{unit.title}}
