--- a/app/partials/controllers/problemSetList.html
+++ b/app/partials/controllers/problemSetList.html
@@ -1,6 +1,6 @@
-<div>
+<div class=well>
     <ul class="nav nav-list">
-        <li class="nav-header">{{unit.title}}</li>
+        <li class=nav-header>{{unit.title}}</li>
         <li ng-repeat="problemSet in problemSets">
             <a href="index.html#/units/{{unit.path}}/{{problemSet.path}}/1">
                 {{problemSet.title}}
