--- a/app/partials/controllers/problem.html
+++ b/app/partials/controllers/problem.html
@@ -1,4 +1,5 @@
 <div>
     <ms-problem-pager></ms-problem-pager>
     <h1>{{problem.title}}</h1>
+    <ms-problem mainanswer={{mainAnswer}} workbook={{workbook}}></ms-problem>
 </div>
