--- a/app/partials/directives/ms-panel.html
+++ b/app/partials/directives/ms-panel.html
@@ -1,5 +1,5 @@
-<div>
-    Problem: {{problem}}<br>
-    Answer: {{answer}}<br>
-    Controls: {{controls}}
+<div class=row-fluid>
+    <ms-expression expected={{problem}} class=span5></ms-expression>
+    <ms-expression expected={{answer}} class=span5></ms-expression>
+    <ms-controls data={{controls}} class=span2></ms-controls>
 </div>
