--- a/app/partials/directives/ms-panel-group.html
+++ b/app/partials/directives/ms-panel-group.html
@@ -1,5 +1,5 @@
 <div class="tabbable tabs-left">
-    <ul class="nav nav-tabs">
+    <ul class="nav nav-tabs" style="visibility: {{navVisibility}};">
         <li
             ng-repeat="panel in panels"
             ng-class="{ active: isActive($index) }"
