--- a/app/partials/controllers/feedback.html
+++ b/app/partials/controllers/feedback.html
@@ -6,10 +6,10 @@
         <th>Correct Answer</th>
         <th>Provided Answer</th>
     </tr>
-    <tr ng-repeat="problemFeedback in feedback">
+    <tr ng-repeat="problemFeedback in feedback" class={{rowClass(problemFeedback.result)}}>
         <td>{{problemFeedback.problemNumber}}</td>
         <td><ms-expression expected={{problemFeedback.problem}}></ms-expression></td>
-        <td><ms-expression expected={{problemFeedback.expected}}></ms-expression></td>
-        <td><ms-expression expected={{problemFeedback.answer}}></ms-expression></td>
+        <td><ms-expression expected="{{problemFeedback.expected | input2str}}"></ms-expression></td>
+        <td><ms-expression expected="{{problemFeedback.answer | input2str}}"></ms-expression></td>
     </tr>
 </table>
