--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,30 +1,95 @@
 /* app css stylesheet */
 
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+
+/* Animations */
+
+/* fadeIn */
+ms-panel div {
+    -moz-animation: fadein 1s, slideup 0.25s ease-in;
+    -ms-animation: fadein 1s, slideup 0.25s ease-in;
+    -o-animation: fadein 1s, slideup 0.25s ease-in;
+    -webkit-animation: fadein 1s, slideup 0.25s ease-in;
+    animation: fadein 1s, slideup 0.25s ease-in;
 }
 
-.menu:before {
-  content: "[";
+@-webkit-keyframes fadein {
+    from {
+        opacity: 0.0;
+    }
+
+    to {
+        opacity: 1.0;
+    }
 }
 
-.menu:after {
-  content: "]";
+@-moz-keyframes fadein {
+    from {
+        opacity: 0.0;
+    }
+
+    to {
+        opacity: 1.0;
+    }
 }
 
-.menu > li {
-  display: inline;
+@-o-keyframes fadein {
+    from {
+        opacity: 0.0;
+    }
+
+    to {
+        opacity: 1.0;
+    }
 }
 
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
+@keyframes fadein {
+    from {
+        opacity: 0.0;
+    }
+
+    to {
+        opacity: 1.0;
+    }
 }
 
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
+/* bounce */
+
+@-webkit-keyframes slideup {
+    from {
+        margin-top: 10px;
+    }
+
+    to {
+        margin-top: inherit;
+    }
+}
+
+@-moz-keyframes slideup {
+    from {
+        margin-top: 10px;
+    }
+
+    to {
+        margin-top: inherit;
+    }
+}
+
+@-o-keyframes slideup {
+    from {
+        margin-top: 10px;
+    }
+
+    to {
+        margin-top: inherit;
+    }
+}
+
+@keyframes slideup {
+    from {
+        margin-top: 10px;
+    }
+
+    to {
+        margin-top: inherit;
+    }
 }
