add parameter for english or math display (must be math display to display sum)

--- a/app/partials/directives/ms-addition.html
+++ b/app/partials/directives/ms-addition.html
@@ -27,9 +27,9 @@
 	  	border-top:2px solid black;
   }    
 </style>
-
+<span ng-hide="mathdisplay">{{inenglish}}</span>
 <span>
-    	<table class="collapseTable td_padding large-font-size">
+    	<table ng-show="mathdisplay" class="collapseTable td_padding large-font-size">
 			<tr class="tr_height">
             	<td>
                 </td>
