--- a/app/css/app.css
+++ b/app/css/app.css
@@ -8,11 +8,15 @@
 
 /* fadeIn */
 ms-panel > div {
-    -moz-animation: fadein 1s, slideup 0.25s ease-in;
     -ms-animation: fadein 1s, slideup 0.25s ease-in;
+    -moz-animation: fadein 1s, slideup 0.25s ease-in;
     -o-animation: fadein 1s, slideup 0.25s ease-in;
     -webkit-animation: fadein 1s, slideup 0.25s ease-in;
     animation: fadein 1s, slideup 0.25s ease-in;
+}
+
+ms-panel > div {
+    padding-top: 10px;
 }
 
 @-webkit-keyframes fadein {
