finished 3.2 Divide Whole Numbers

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,4 +1,5 @@
 @import 'directives/ms-exponent.css';
+@import 'directives/ms-div-wholes.css';
 @import 'directives/ms-group.css';
 
 /* app css stylesheet */
