Clicking help hides any feedback and changes controls button text.
Clicking help does the following:
- Remove any validation state from input.
- Hides <ms-feedback>.
- Hides <ms-help-prompt>.
- Changes 'Check Answer' button text to 'Next Problem'.

(Closes #2)

--- a/app/partials/directives/ms-controls.html
+++ b/app/partials/directives/ms-controls.html
@@ -5,7 +5,7 @@
         ng-show=hasCheckAnswer
     >
         <i class="icon-ok icon-white"></i>
-        Check Answer
+        {{answerButtonText}}
     </button>
     <button
         class="btn btn-warning btn-block"
