--- a/app/partials/controllers/problemSetList.html
+++ b/app/partials/controllers/problemSetList.html
@@ -1,10 +1,13 @@
 <div class=well>
     <ul class="nav nav-list">
         <li class=nav-header>{{unit.title}}</li>
-        <li ng-repeat="problemSet in problemSets">
-            <a href="index.html#/units/{{unit.path}}/{{problemSet.path}}/1">
-                {{problemSet.title}}
-            </a>
-        </li>
+        <span ng-repeat="problemSet in problemSets">
+            <li class=divider ng-show=divide($index)></li>
+            <li>
+                <a href="index.html#/units/{{unit.path}}/{{problemSet.path}}/1">
+                    {{problemSet.title}}
+                </a>
+            </li>
+        </span>
     </ul>
 </div>
