--- a/app/partials/controllers/feedback.html
+++ b/app/partials/controllers/feedback.html
@@ -9,7 +9,7 @@
     <tr ng-repeat="problemFeedback in feedback" class={{rowClass(problemFeedback.result)}}>
         <td>{{problemFeedback.problemNumber}}</td>
         <td><ms-expression expected={{problemFeedback.problem}}></ms-expression></td>
-        <td><ms-expression expected="{{problemFeedback.expected | input2str  | button2str | checkbox2lbl}}"></ms-expression></td>
-        <td><ms-expression expected="{{problemFeedback.answer | input2str | button2str | checkbox2lbl}}"></ms-expression></td>
+        <td><ms-expression expected="{{problemFeedback.expected | replace:'input':'str'  | replace:'but':'str' | checkbox2lbl | replace:'select':'str'}}"></ms-expression></td>
+        <td><ms-expression expected="{{problemFeedback.answer | replace:'input':'str' | replace:'but':'str' | checkbox2lbl | replace:'select':'str'}}"></ms-expression></td>
     </tr>
 </table>
