--- a/app/partials/directives/ms-controls.html
+++ b/app/partials/directives/ms-controls.html
@@ -15,4 +15,12 @@
         <i class="icon-question-sign icon-white"></i>
         Help
     </button>
+    <button
+        class="btn btn-primary btn-block"
+        ng-click=showNextProblem()
+        ng-show=hasNextProblem
+    >
+        <i class="icon-arrow-right icon-white"></i>
+        Next Problem
+    </button>
 </div>
