--- a/app/partials/directives/ms-addition.html
+++ b/app/partials/directives/ms-addition.html
@@ -25,7 +25,12 @@
   }
   .border-top-2px-black {
 	  	border-top:2px solid black;
-  }    
+  } 
+  .label_like {
+	color: #069;
+	font-size: 15px;
+	font-weight: normal;
+  }
 </style>
 <span ng-hide="mathdisplay">{{inenglish}}</span>
 <span>
