--- a/app/partials/directives/ms-subtraction.html
+++ b/app/partials/directives/ms-subtraction.html
@@ -48,6 +48,11 @@
   .paddingFullSubtract {
 		padding-left:14px;
   }
+  .label_like {
+	color: #069;
+	font-size: 15px;
+	font-weight: normal;
+  }
 </style>
 <span ng-hide="mathdisplay">{{inenglish}}</span>
 <span>
