added help to 4.1

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,6 +1,8 @@
+@import 'directives/mean-median-mode_4-1.css';
 @import 'directives/ms-exponent.css';
 @import 'directives/ms-div-wholes.css';
 @import 'directives/ms-group.css';
+
 
 /* app css stylesheet */
 
