2A.2 problem 10 uniform padding between buttons and labels

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -125,3 +125,10 @@ ms-panel > div {
         margin-top: inherit;
     }
 }
+
+/* required for control-data.js css tag */
+
+.button-label-margin {
+	width: 160px;
+	padding-left:16px;
+}
