Add complete <ms-prime-factorization> with partial test suite.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -2,6 +2,7 @@
 @import 'directives/ms-exponent.css';
 @import 'directives/ms-div-wholes.css';
 @import 'directives/ms-group.css';
+@import 'directives/ms-prime-factorization.css';
 
 
 /* app css stylesheet */
