Fix <ms-prime-factorization> UI test.

--- a/app/partials/directives/ms-prime-factorization.html
+++ b/app/partials/directives/ms-prime-factorization.html
@@ -5,7 +5,7 @@
             <ms-expression expected={{finalAnswer}} label=finalAnswer></ms-expression>
         </span>
     </div>
-    <table>
+    <table class=factors>
         <tr ng-repeat="row in completedRows">
             <td class=divisor>{{row.divisor}}</td>
             <td class=dividend>{{row.dividend}}</td>
