<ms-problem> & <ms-panel-group> now route checkFocus events to their children.
[Closes #4]

--- a/app/partials/directives/ms-panel-group.html
+++ b/app/partials/directives/ms-panel-group.html
@@ -1,7 +1,7 @@
 <div class="tabbable tabs-left">
     <ul class="nav nav-tabs" style="visibility: {{navVisibility}};">
         <li
-            ng-repeat="panel in panels"
+            ng-repeat="panelLink in panels"
             ng-class="{ active: isActive($index) }"
         >
             <a
