--- a/app/partials/directives/ms-problem.html
+++ b/app/partials/directives/ms-problem.html
@@ -1,9 +1,9 @@
 <div>
     <ul class="nav nav-tabs">
-        <li class=active><a href="#problem" data-toggle="tab" onclick="return false;">Problem</a></li>
+        <li class=active><a href="#problem" data-toggle="tab" ng-click="updateTab('problem')" onclick="return false;">Problem</a></li>
         <li ng-class="{ disabled: !workbook }" ng-switch on=!workbook>
-            <a ng-switch-when=false href="#workbook" data-toggle="tab" onclick="return false;">Workbook</a>
-            <a ng-switch-when=true onclick="return false;">Workbook</a>
+            <a ng-switch-when=false href="#workbook" data-toggle="tab" ng-click="updateTab('wb')" onclick="return false;">Workbook</a>
+            <a ng-switch-when=true ng-click="updateTab('wb')" onclick="return false;">Workbook</a>
         </li>
     </ul>
     <div class=tab-content>
