--- a/app/partials/directives/ms-multiplication.html
+++ b/app/partials/directives/ms-multiplication.html
@@ -52,7 +52,7 @@
                 <td>
                 </td>
 			</tr>
-            <tr ng-repeat='row in thirdArray' class="tr_height"'>
+            <tr ng-repeat='row in thirdArray' class='tr_height'>
             	<td>
                 </td>
                 <td class='text_align_right' ng-repeat='col in row'>{{col}}
