test graph.js, also added modified flot to test library- css defaults set manually rather than by reference to existing page at line 668, also Canvas.prototype.resize forced width and height if they were 0 or less instead of throwing an error (line 116)

--- a/app/partials/directives/ms-graph.html
+++ b/app/partials/directives/ms-graph.html
@@ -20,13 +20,13 @@
 	}
 </style>
 
-<table class=tableDimensions>
+<table>
 	<th colspan=2 class="align_center font_weight_bold">
 	    <span class="margin_left_small">{{graphTitleIn}}</span>
     </th>
 	<tr>
     	<td>
-	        <div class="rotateCounterClock90 font_weight_bold">{{graphverticalIn}}</div>
+	        <span class="rotateCounterClock90 font_weight_bold">{{graphverticalIn}}</span>
         </td>
 		<td>
 			<div id="placeholder" class=placeholderDimensions></div>
