more work on subtract-decimals.js directive-

--- a/app/partials/directives/ms-subtraction.html
+++ b/app/partials/directives/ms-subtraction.html
@@ -33,7 +33,7 @@
   .padding_right_8px {
 	  	padding-right:8px;
   }
-  .line_through_dimmed {
+  .row-one .line_through_dimmed {
 	  	text-decoration: line-through;
 		color: rgba(0, 0, 0, .7);
   }
@@ -53,6 +53,7 @@
 	font-size: 15px;
 	font-weight: normal;
   }
+
 </style>
 <span ng-hide="mathdisplay">{{inenglish}}</span>
 <span>
