improve add, subtract, multiply wholes and decimals help panel css

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,3 +1,4 @@
+@import 'directives/add-subtract-multiply.css';
 @import 'directives/ms-button.css';
 @import 'directives/ms-div-wholes.css';
 @import 'directives/ms-exponent.css';
