--- a/app/partials/directives/ms-reduce-fraction.html
+++ b/app/partials/directives/ms-reduce-fraction.html
@@ -1,2 +1,2 @@
-<div class="alert alert-info">{{instructions}}</div>
+<div class="alert alert-info"><ms-expression expected={{instructions}} label="instructionsdisplay"></ms-expression></div>
 <ms-expression label={{answerlbl}} expected={{answerexp}}></ms-expression>
