ms-addition.html css into add-subtract-multiply.css

--- a/app/css/directives/add-subtract-multiply.css
+++ b/app/css/directives/add-subtract-multiply.css
@@ -1,5 +1,62 @@
-/* required for control-data.js css tag */
-
+.arrowheadRight {
+	  position: relative;
+	  width: 0;
+	  height: 0;
+	  display:block;
+}
+.arrowheadRight:after {
+	  content: "";
+	  position: absolute;
+	  display:block;
+	  border-left: 2px solid transparent;
+	  border-bottom: 4px solid black;
+	  border-right: 2px solid transparent;
+	  top: -42px;
+	  left: .95em;
+	  width: 0;
+	  height: .3em;
+	  -webkit-transform: rotate(45deg);
+	  -moz-transform: rotate(45deg);
+	  -ms-transform: rotate(45deg);
+	  -o-transform: rotate(45deg);
+}
+.arrowheadLeft {
+	  position: relative;
+	  width: 0;
+	  height: 0;
+	  display:block;
+}
+.arrowheadLeft:after {
+	  content: "";
+	  position: absolute;
+	  display:block;
+	  border-left: 2px solid transparent;
+	  border-bottom: 4px solid black;
+	  border-right: 2px solid transparent;
+	  top: -42px;
+	  left: -.3em;
+	  width: 0;
+	  height: .3em;
+	  -webkit-transform: rotate(-45deg);
+	  -moz-transform: rotate(-45deg);
+	  -ms-transform: rotate(-45deg);
+	  -o-transform: rotate(-45deg);
+}
+.borderArrowhead{
+	position: relative;
+	text-align:center;
+    border-bottom: 1px solid black;
+    border-radius:0 0 1em 1em;
+}
+.border-top-2px-black {
+	border-top:2px solid black;
+} 
+.carry {
+font-size:small;
+}
+.collapseTable {
+border-collapse:collapse;
+}
 .help-answer-text {
 	display:block;	
 	margin-left:50px;
@@ -7,3 +64,35 @@
 	font-size: 15px;
 	font-weight: normal;
 }
+.label_like {
+color: #069;
+font-size: 15px;
+font-weight: normal;
+}
+.large-font-size {
+	font-size:110%;
+}
+table.td_padding td {
+	padding-left:4px;
+	padding-right:4px;
+}
+.td_padding_small {
+	padding-left:2px;
+	padding-right:4px;
+}
+.text_align_center {
+  text-align:center;
+}
+.text_align_left {
+  text-align:left;
+}
+.text_align_right {
+  text-align:right;
+}
+.tr_height {
+  height:1.7em;
+}
+.tr_height_plus {
+  height:2em;
+}
+
