--- a/app/partials/directives/ms-subtraction.html
+++ b/app/partials/directives/ms-subtraction.html
@@ -1,60 +1,3 @@
-<style type="text/css">
-
-  table.td_padding td {
-	padding-left:4px;
-	padding-right:4px;
-  }
-  .collapseTable {
-	border-collapse:collapse;
-  }
-  .large-font-size {
-	  	font-size:110%;
-  }
-  .tr_height {
-	  height:1.7em;
-  }
-  .tr_height_plus {
-	  height:2em;
-  }
-
-  .text_align_right {
-	  text-align:right;
-  }
-  .carry {
-	font-size:small;
-  }
-  .border-bottom-2px-black {
-	  	border-top:2px solid black;
-  }    
-  .whole-part-font-size {
-	  	font-size:150%;
-		margin-right:4px;
-  }
-  .padding_right_8px {
-	  	padding-right:8px;
-  }
-  .row-one .line_through_dimmed {
-	  	text-decoration: line-through;
-		color: rgba(0, 0, 0, .7);
-  }
-  .borrowSubtract {
-	  	vertical-align:top;
-		font-size:.7em;
-		padding-left:4px;
-  }
-  .paddingHalfSubtract {
-		padding-left:8px;
-  }
-  .paddingFullSubtract {
-		padding-left:14px;
-  }
-  .label_like {
-	color: #069;
-	font-size: 15px;
-	font-weight: normal;
-  }
-
-</style>
 <span ng-hide="mathdisplay">{{inenglish}}</span>
 <span>
     	<table ng-show="mathdisplay" class="collapseTable large-font-size">
@@ -78,7 +21,7 @@
             <tr class="tr_height_plus">
             	<td>
                 </td>
-				<td class='border-bottom-2px-black  text_align_right' ng-repeat='columnEntry in thirdArray'>{{columnEntry}}
+				<td class='border-top-2px-black  text_align_right' ng-repeat='columnEntry in thirdArray'>{{columnEntry}}
 				</td>				
                 <td>
                 </td>
