match multiply-decimals-power-ten.html styling to prior decimal partial styling

--- a/app/partials/directives/ms-multiply-decimals-power-ten.html
+++ b/app/partials/directives/ms-multiply-decimals-power-ten.html
@@ -31,5 +31,5 @@
             </tr>	
 		</table>
 	</span>
-    <span ng-hide="hideInstructions" class='label_like text_align_left'>{{helpInstructions}}</span>
+    <span ng-hide="hideInstructions" class='text_align_left'>{{helpInstructions}}</span>
 
