--- a/app/css/directives/ms-fraction.css
+++ b/app/css/directives/ms-fraction.css
@@ -12,10 +12,15 @@ div .fraction .control-group {
 	padding:0px;
 	margin:0px;
 }
-
 .fraction tr:nth-child(2) td {
 	vertical-align:top;
 }
 .fraction tr:nth-child(3) td {
 	padding:4px;
+}
+.help-answer-text-tight {
+	display:block;	
+	color: #069;
+	font-size: 15px;
+	font-weight: normal;
 }
