placevalue.js, change display per Matt's correction [fixes #15]

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -5,6 +5,7 @@
 @import 'directives/ms-fraction.css';
 @import 'directives/ms-group.css';
 @import 'directives/ms-input.css';
+@import 'directives/ms-placevalue.css';
 @import 'directives/ms-select.css';
 @import 'directives/mean-median-mode_4-1.css';
 @import 'directives/ms-prime-factorization.css';
