enlarged the multiply sign (&sdot;) for multiply whole and multiply decimal per Matt

--- a/app/partials/directives/ms-multiplication.html
+++ b/app/partials/directives/ms-multiplication.html
@@ -1,4 +1,4 @@
-<span ng-hide="mathdisplay">{{inenglish}}</span>
+<span ng-hide="mathdisplay">{{inenglishfirst}}</span><span ng-hide="mathdisplay" class="bigger"> &sdot; </span><span ng-hide="mathdisplay">{{inenglishsecond}}</span>
 <span>
     	<table ng-show="mathdisplay" class="collapseTable td_padding large-font-size">
 			<tr class="tr_height">
