--- a/app/partials/directives/ms-instruction.html
+++ b/app/partials/directives/ms-instruction.html
@@ -3,10 +3,12 @@
 
 </style>
 
-<div class="alert alert-info">{{instructions}}</div>
+<div class="alert alert-info"  ng-bind-html-unsafe=instructions1></div>
 
 <div>
     <span>
-        <ms-expression expected={{myExpected}} label=finalAnswer></ms-expression>
+        <ms-expression expected={{expectedArgs[0]}} label=finalAnswer></ms-expression>
     </span>
 </div>
+
+<div class="alert alert-info" ng-bind-html-unsafe=instructions2 ng-hide=view></div>
