--- a/app/css/app.css
+++ b/app/css/app.css
@@ -6,6 +6,7 @@
 @import 'directives/ms-group.css';
 @import 'directives/ms-input.css';
 @import 'directives/ms-placevalue.css';
+@import 'directives/ms-percent.css';
 @import 'directives/ms-select.css';
 @import 'directives/ms-sign.css';
 @import 'directives/mean-median-mode_4-1.css';
