2a.2 fix page display for first 4 problems

--- a/app/partials/directives/ms-chart.html
+++ b/app/partials/directives/ms-chart.html
@@ -6,9 +6,10 @@
   }
   .collapseTable {
 		border-collapse:collapse;
+		font-size:75%;
   }
-  .large-font-size {
-	  	font-size:110%;
+  table {
+  	color:red;
   }
   .tr_height {
 	  	height:1.7em;
@@ -33,7 +34,7 @@
 </style>
 
 <span>
-       <table class="collapseTable td_padding text_align_center large-font-size">
+       <table class="collapseTable td_padding text_align_center">
             	<tr ng-show="chartTitleIn">
                 	<th colspan="{{chartColumnsIn}}">
 									<span class="fontWeightBold">{{chartTitleIn}}</span>
