center and downscale the problem pager

--- a/app/partials/directives/ms-problem-pager.html
+++ b/app/partials/directives/ms-problem-pager.html
@@ -1,5 +1,5 @@
 <div class=row-fluid>
-    <div class="pagination span12">
+    <div class="pagination span12 pagination-small pagination-centered">
         <ul>
             <li ng-repeat="problem in problemSet" ng-class="{ active: isActive($index) }">
                 <a href="index.html#/units/{{unitPath}}/{{problemSetPath}}/{{$index + 1}}">{{$index + 1}}</a>
