css for 6.3 and 9.1 center help text

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,4 +1,5 @@
 @import 'directives/add-subtract-multiply.css';
+@import 'directives/help-style.css';
 @import 'directives/ms-button.css';
 @import 'directives/ms-div-wholes.css';
 @import 'directives/ms-exponent.css';
