ms.placevalue- help answer value now matches expected input answer value

--- a/app/partials/directives/ms-placevalue.html
+++ b/app/partials/directives/ms-placevalue.html
@@ -30,7 +30,7 @@
         </table>
         <table ng-show="showanswer" class="margin-left-small label_like">
             <tr>
-                <td ng-repeat="number in numberArray">
+                <td ng-repeat="number in decimalAnswerArray">
                     {{number}}
                 </td>
             </tr>
