--- a/app/css/directives/ms-input.css
+++ b/app/css/directives/ms-input.css
@@ -1,3 +1,8 @@
 ms-input label span {
     display: none;
 }
+
+/* Cursor centered in input box, per Matt 5/29/13*/
+input {
+	text-align:center;
+}
