ms-placevalue.js, fixes #41

--- a/app/partials/directives/ms-placevalue.html
+++ b/app/partials/directives/ms-placevalue.html
@@ -18,6 +18,10 @@
                 	<span class="label_like">
                     	{{helpInstructions2}}
                     </span>
+                    <br /><br />
+                	<span class="label_like">
+                    	{{helpInstructions3}}
+                    </span>
                 </td>
             </tr>
         </table>
