--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,6 +1,7 @@
 @import 'directives/add-subtract-multiply.css';
 @import 'directives/help-style.css';
 @import 'directives/ms-button.css';
+@import 'directives/ms-chart.css';
 @import 'directives/ms-div-wholes.css';
 @import 'directives/ms-exponent.css';
 @import 'directives/ms-fraction.css';
